@@ -1,6 +1,5 @@
 package com.backend.liargame.game.service;
 
-import com.backend.liargame.common.service.WebSocketService;
 import com.backend.liargame.game.contoller.LiarGuessResponseDto;
 import com.backend.liargame.game.dto.*;
 import com.backend.liargame.game.entity.GameStatus;
@@ -26,12 +25,12 @@ import java.util.stream.Collectors;
 @Service
 public class GameService {
 
-    private final GameRepository gameRepository;
     private final TopicRepository topicRepository;
     private final KeywordRepository keywordRepository;
-
-    private final WebSocketService webSocketService;
     private final SimpMessagingTemplate messagingTemplate;
+
+    private final Map<String, CopyOnWriteArrayList<String>> roomPlayers = new ConcurrentHashMap<>();
+    private final ConcurrentHashMap<String, CopyOnWriteArrayList<String>> lateJoiners = new ConcurrentHashMap<>();
     private final Map<String, GameStatus> gameStatusMap = new ConcurrentHashMap<>();
     private final Map<String, Map<String, String>> votes = new ConcurrentHashMap<>();
     private final Map<String, Map<String, Boolean>> liarVoteConsent = new ConcurrentHashMap<>();
@@ -39,62 +38,137 @@ public class GameService {
     private final Map<String, Integer> currentTurnMap = new ConcurrentHashMap<>();
     private final Map<String, Integer> timeLeftMap = new ConcurrentHashMap<>();
     private final Map<String, Integer> turnCounterMap = new ConcurrentHashMap<>();
+    private final Map<String, Integer> liarPlayer = new ConcurrentHashMap<>();
+    private final Map<String, CopyOnWriteArrayList<String>> topicAndKeyword = new ConcurrentHashMap<>();
     private final ThreadPoolTaskScheduler scheduler;
     private final Map<String, ScheduledFuture<?>> voteStartTasks = new ConcurrentHashMap<>();
 
-    public GameService(GameRepository gameRepository, TopicRepository topicRepository, KeywordRepository keywordRepository, WebSocketService webSocketService, SimpMessagingTemplate messagingTemplate, ThreadPoolTaskScheduler scheduler) {
-        this.gameRepository = gameRepository;
+    private final int TURN_TIME = 20;  // 각 플레이어 별 시간
+
+    public GameService(GameRepository gameRepository, TopicRepository topicRepository, KeywordRepository keywordRepository, SimpMessagingTemplate messagingTemplate, ThreadPoolTaskScheduler scheduler) {
         this.topicRepository = topicRepository;
         this.keywordRepository = keywordRepository;
-        this.webSocketService = webSocketService;
         this.messagingTemplate = messagingTemplate;
         this.scheduler = scheduler;
     }
 
+    // 플레이어 추가
+    public void addPlayer(String roomCode, String nickname) {
+        roomPlayers.putIfAbsent(roomCode, new CopyOnWriteArrayList<>());
+        lateJoiners.putIfAbsent(roomCode, new CopyOnWriteArrayList<>());
+
+        // 게임 도중 입장했다면 lateJoiner 에 우선 추가
+        if(getGameStatus(roomCode) == GameStatus.IN_PROGRESS){
+            lateJoiners.get(roomCode).add(nickname);
+        } else {
+            roomPlayers.get(roomCode).add(nickname);
+        }
+        List<String> playerList = new ArrayList<>();
+        playerList.addAll(roomPlayers.get(roomCode));
+        playerList.addAll(lateJoiners.get(roomCode));
+
+        messagingTemplate.convertAndSend("/topic/room/" + roomCode + "/players", playerList);
+    }
+
+    // 플레이어 제거
+    public void removePlayer(String roomCode, String nickname) {
+        CopyOnWriteArrayList<String> players = roomPlayers.get(roomCode);
+        if (players != null) {
+            players.remove(nickname);
+            messagingTemplate.convertAndSend("/topic/room/" + roomCode + "/players", players);
+        }
+    }
+
+    public int getPlayerCount(String roomCode) {
+        CopyOnWriteArrayList<String> players = roomPlayers.get(roomCode);
+        return (players != null) ? players.size() : 0;
+    }
+
+    public CopyOnWriteArrayList<String> getPlayers(String roomCode) {
+        return roomPlayers.get(roomCode);
+    }
+
+    public CopyOnWriteArrayList<String> getWaiters(String roomCode) {
+        return lateJoiners.get(roomCode);
+    }
+
+    public boolean isNicknameTaken(String roomCode, String nickname) {
+        CopyOnWriteArrayList<String> players = roomPlayers.getOrDefault(roomCode, new CopyOnWriteArrayList<>());
+        return players.contains(nickname);
+    }
+
+    public Integer getLiarIndex(String roomCode) {
+        return liarPlayer.get(roomCode);
+    }
+
+    public List<String> getKeyword(String roomCode) {
+        CopyOnWriteArrayList<String> topicAndKeywords = topicAndKeyword.get(roomCode);
+        List<String> answer = new ArrayList<>();
+        answer.add(topicAndKeywords.get(0));
+        answer.add(topicAndKeywords.get(1));
+        return answer;
+    }
+
+    // 게임 시작
     public GameStartResponseDTO startGame(String roomCode) {
 
         if (gameStatusMap.getOrDefault(roomCode, GameStatus.WAITING) == GameStatus.IN_PROGRESS) {
             throw new IllegalStateException("이미 게임이 진행중입니다.");
         }
 
-        CopyOnWriteArrayList<String> players = webSocketService.getPlayers(roomCode);
+        CopyOnWriteArrayList<String> players = this.getPlayers(roomCode);
+        CopyOnWriteArrayList<String> waiters = lateJoiners.getOrDefault(roomCode, new CopyOnWriteArrayList<>());
+
+        // 기다리던 사람 모두 추가
+        players.addAll(waiters);
+        lateJoiners.put(roomCode, new CopyOnWriteArrayList<>());
 
         int liarIndex = new Random().nextInt(players.size());
 
         // 랜덤한 Topic 가져오기
         Topic topic = topicRepository.findRandomTopic()
                 .orElseThrow(() -> new RuntimeException("No Topic found"));
-
         log.info("[GameService] - Topic ID: {}", topic.getId());
 
         // 해당 토픽에 속하는 랜덤한 keyword 가져오기
-        Optional<Keyword> keywordOpt = keywordRepository.findRandomKeywordByTopicId(topic.getId());
-        if (keywordOpt.isPresent()) {
-            log.info("Selected Keyword: {}", keywordOpt.get().getName());
-        } else {
-            log.warn("No Keyword found for Topic ID: {}", topic.getId());
-        }
-
-
         String keyword = keywordRepository.findRandomKeywordByTopicId(topic.getId())
                 .map(Keyword::getName)
                 .orElse("실패한 지시어 입니다.");
 
-
-        webSocketService.startGame(roomCode, liarIndex, topic.getName(), keyword);
+        this.startGame(roomCode, liarIndex, topic.getName(), keyword);
         gameStatusMap.put(roomCode, GameStatus.IN_PROGRESS); // 시작 상태로 변경
 
         // 랜덤하게 첫 번째 턴 플레이어 선택
         int initialTurn = new Random().nextInt(players.size());
         currentTurnMap.put(roomCode, initialTurn);
-
-        timeLeftMap.put(roomCode, 15); // 초기 남은 시간 설정
+        timeLeftMap.put(roomCode, TURN_TIME); // 초기 남은 시간 설정
 
         // 첫 번째 턴 플레이어 알림
-        webSocketService.convertAndSend("/topic/room/" + roomCode + "/turnUpdate", players.get(initialTurn));
+        messagingTemplate.convertAndSend("/topic/room/" + roomCode + "/turnUpdate", players.get(initialTurn));
 
         GameCreateDTO game = new GameCreateDTO(liarIndex, topic.getName(), keyword);
         return new GameStartResponseDTO(game, players);
+    }
+
+    // 라이어 및 일반 플레이어에게 메시지 전송
+    public void startGame(String roomCode, int liarIndex, String topic, String keyword) {
+        CopyOnWriteArrayList<String> players = this.getPlayers(roomCode);
+        String liar = players.get(liarIndex);
+        liarPlayer.put(roomCode, liarIndex);
+        topicAndKeyword.put(roomCode, new CopyOnWriteArrayList<>());
+        topicAndKeyword.get(roomCode).add(topic);
+        topicAndKeyword.get(roomCode).add(keyword);
+
+        GameCreateWebSocketResponseDTO liarDto = new GameCreateWebSocketResponseDTO("당신은 라이어입니다. <br>주제는 \"" + topic + "\"입니다.", players);
+        messagingTemplate.convertAndSend("/topic/room/" + roomCode + "/gameStart/" + liar, liarDto);
+
+        GameCreateWebSocketResponseDTO normalDto = new GameCreateWebSocketResponseDTO("주제는 \"" + topic + "\"이며 <br>제시어는 \"" + keyword + "\"입니다. <br>라이어를 찾아주세요.", players);
+        for (int i = 0; i < players.size(); i++) {
+            if (i != liarIndex) {
+                String player = players.get(i);
+                messagingTemplate.convertAndSend("/topic/room/" + roomCode + "/gameStart/" + player, normalDto);
+            }
+        }
     }
 
     public GameStatus getGameStatus(String roomCode) {
@@ -105,9 +179,9 @@ public class GameService {
         votes.computeIfAbsent(roomCode, k -> new ConcurrentHashMap<>()).put(voter, votee);
         log.info("[GameService - submitVote] - 총 투표 사이즈 : " + votes.get(roomCode).size());
 
-        if(votes.get(roomCode).size() == webSocketService.getPlayerCount(roomCode)){
+        if (votes.get(roomCode).size() == this.getPlayerCount(roomCode)) {
 
-            CopyOnWriteArrayList<String> players = webSocketService.getPlayers(roomCode);
+            CopyOnWriteArrayList<String> players = this.getPlayers(roomCode);
 
             // 각 플레이어가 받은 표를 집계하는 로직
             Map<String, AtomicInteger> voteCounts = new ConcurrentHashMap<>();
@@ -118,21 +192,17 @@ public class GameService {
                     .collect(Collectors.toMap(Map.Entry::getKey, e -> e.getValue().get()));
 
             List<String> mostVotedPlayers = findMostVotedPlayers(voteResult);
-            Integer liarIndex = webSocketService.getLiarIndex(roomCode);
-
+            Integer liarIndex = this.getLiarIndex(roomCode);
             String liar = players.get(liarIndex);
-            boolean liarWon = mostVotedPlayers.size() != 1 || !mostVotedPlayers.getFirst().equals(liar);
+            boolean liarWon = mostVotedPlayers.size() != 1 || !mostVotedPlayers.get(0).equals(liar);
 
             VoteResultResponseDto voteResultResponseDto = new VoteResultResponseDto(voteResult, mostVotedPlayers, liar, liarWon);
             messagingTemplate.convertAndSend("/topic/room/" + roomCode + "/voteResult", voteResultResponseDto);
         }
-
-
     }
 
-    // 가장 많이 투표받은 플레이어들을 찾는 로직
     public List<String> findMostVotedPlayers(Map<String, Integer> voteCounts) {
-        List<String> mostVoted = voteCounts.entrySet().stream()
+        return voteCounts.entrySet().stream()
                 .collect(Collectors.groupingBy(Map.Entry::getValue)) // 표 수(value)로 그룹핑
                 .entrySet().stream()
                 .max(Map.Entry.comparingByKey()) // 최대 표 수를 가진 엔트리를 찾음
@@ -141,14 +211,9 @@ public class GameService {
                 .stream()
                 .map(Map.Entry::getKey) // 플레이어 이름만 추출
                 .collect(Collectors.toList());
-
-        return mostVoted;
     }
 
-
-
     public void handleVote(String roomCode, VoteRequest voteRequest) {
-
         String voter = voteRequest.name();
         String votee = voteRequest.vote();
 
@@ -158,15 +223,14 @@ public class GameService {
         // 실시간 투표 결과 전송
         Map<String, String> voteResults = votes.get(roomCode);
         log.info("Sending vote results: " + voteResults);
-        webSocketService.convertAndSend("/topic/room/" + roomCode + "/voteUpdate", voteResults);
+        messagingTemplate.convertAndSend("/topic/room/" + roomCode + "/voteUpdate", voteResults);
     }
 
     public void voteForLiarVote(String roomCode, VoteRequest voteRequest) {
-
         String nickname = voteRequest.name();
         Boolean yesOrNo = voteRequest.vote().equals("yes");
 
-        if(yesOrNo){
+        if (yesOrNo) {
             liarVoteConsent.computeIfAbsent(roomCode, k -> new ConcurrentHashMap<>()).put(nickname, yesOrNo);
         }
 
@@ -175,18 +239,15 @@ public class GameService {
 
         messagingTemplate.convertAndSend("/topic/room/" + roomCode + "/voteUpdate", voteResults.size());
 
-        if(webSocketService.getPlayerCount(roomCode) / 2 < voteResults.size()){
+        if (this.getPlayerCount(roomCode) / 2 < voteResults.size()) {
             messagingTemplate.convertAndSend("/topic/room/" + roomCode + "/startVote", "");
         }
     }
 
     public void handleDeclaration(String roomCode, DeclarationRequest declarationRequest) {
-
         String nickname = declarationRequest.name();
         String declaration = declarationRequest.declaration();
-
-        CopyOnWriteArrayList<String> players = webSocketService.getPlayers(roomCode);
-
+        CopyOnWriteArrayList<String> players = this.getPlayers(roomCode);
         int currentTurn = currentTurnMap.getOrDefault(roomCode, 0);
 
         if (!players.get(currentTurn).equals(nickname)) {
@@ -196,14 +257,12 @@ public class GameService {
 
         // 실시간 선언 전송
         log.info("[GameService - submitDeclaration] - " + nickname + " : " + declaration);
-        webSocketService.convertAndSend("/topic/room/" + roomCode + "/declarationUpdate", declarations.get(roomCode));
+        messagingTemplate.convertAndSend("/topic/room/" + roomCode + "/declarationUpdate", declarations.get(roomCode));
 
         // 턴 카운터 업데이트
         int turnCounter = turnCounterMap.getOrDefault(roomCode, 0) + 1;
         if (turnCounter >= players.size()) {
-            // 모든 플레이어가 한 번씩 턴을 마쳤다면 게임 종료 또는 다음 단계로
             log.info("[GameService - handleDeclaration] - turnCounter: {}, players.size(): {}", turnCounter, players.size());
-
             startVote(roomCode); // 게임 종료 메서드 호출 (또는 다음 단계로 이동)
             return;
         } else {
@@ -213,13 +272,12 @@ public class GameService {
         // 턴을 다음 플레이어로 넘김
         currentTurn = (currentTurn + 1) % players.size();
         currentTurnMap.put(roomCode, currentTurn);
-        timeLeftMap.put(roomCode, 15); // 남은 시간 초기화
+        timeLeftMap.put(roomCode, TURN_TIME); // 남은 시간 초기화
 
         String nextPlayer = players.get(currentTurn);
-        webSocketService.convertAndSend("/topic/room/" + roomCode + "/turnUpdate", nextPlayer);
-        messagingTemplate.convertAndSend("/topic/room/" + roomCode + "/timer", new TimerMessage(15, nextPlayer)); // 초기화된 타이머 브로드캐스트
+        messagingTemplate.convertAndSend("/topic/room/" + roomCode + "/turnUpdate", nextPlayer);
+        messagingTemplate.convertAndSend("/topic/room/" + roomCode + "/timer", new TimerMessage(TURN_TIME, nextPlayer)); // 초기화된 타이머 브로드캐스트
     }
-
 
     /*
        타이머 관련 로직
@@ -229,28 +287,22 @@ public class GameService {
         for (Map.Entry<String, Integer> entry : timeLeftMap.entrySet()) {
             String roomCode = entry.getKey();
             int timeLeft = entry.getValue();
-
-            CopyOnWriteArrayList<String> players = webSocketService.getPlayers(roomCode);
+            CopyOnWriteArrayList<String> players = this.getPlayers(roomCode);
 
             if (players.isEmpty()) {
-                // 방에 플레이어가 없으면 작업을 중지
                 log.warn("No players left in room: " + roomCode);
                 timeLeftMap.remove(roomCode);  // 더 이상 시간을 카운트하지 않도록 함
                 currentTurnMap.remove(roomCode);  // currentTurn 정보도 삭제
-                continue;  // 다음 방으로 넘어감
+                continue;
             }
-//            log.info("[Scheduling] - roomCode : " + roomCode);
             if (timeLeft > 0) {
                 int currentTurn = currentTurnMap.getOrDefault(roomCode, 0);
-                // 플레이어가 남아 있는지, currentTurn 이 유효한지 확인
                 if (!players.isEmpty() && currentTurn < players.size()) {
                     String currentPlayer = players.get(currentTurn);
                     TimerMessage timerMessage = new TimerMessage(timeLeft, currentPlayer);
-//                  log.info("[Scheduling] - Broadcasting TimerMessage: " + timerMessage); // 추가된 로그
-                    messagingTemplate.convertAndSend("/topic/room/" + roomCode + "/timer", new TimerMessage(timeLeft, currentPlayer));
+                    messagingTemplate.convertAndSend("/topic/room/" + roomCode + "/timer", timerMessage);
                     timeLeftMap.put(roomCode, timeLeft - 1);
-                }
-                else {
+                } else {
                     nextPlayerTurn(roomCode);
                 }
             } else {
@@ -260,51 +312,42 @@ public class GameService {
     }
 
     private void nextPlayerTurn(String roomCode) {
-        CopyOnWriteArrayList<String> players = webSocketService.getPlayers(roomCode);
-
-        // 플레이어 리스트가 비어 있는지 확인
+        CopyOnWriteArrayList<String> players = this.getPlayers(roomCode);
         if (players.isEmpty()) {
             log.warn("No players left in room: " + roomCode);
-            return; // 플레이어가 없으면 더 이상 진행하지 않음
+            return;
         }
-
         int currentTurn = currentTurnMap.getOrDefault(roomCode, 0);
         currentTurn = (currentTurn + 1) % players.size();
         currentTurnMap.put(roomCode, currentTurn);
-        timeLeftMap.put(roomCode, 15);
+        timeLeftMap.put(roomCode, TURN_TIME);
 
         String nextPlayer = players.get(currentTurn);
-        webSocketService.convertAndSend("/topic/room/" + roomCode + "/turnUpdate", nextPlayer);
+        messagingTemplate.convertAndSend("/topic/room/" + roomCode + "/turnUpdate", nextPlayer);
 
-        TimerMessage timerMessage = new TimerMessage(15, nextPlayer);
-        log.info("[nextPlayerTurn] - Broadcasting TimerMessage: " + timerMessage); // 추가된 로그
-        messagingTemplate.convertAndSend("/topic/room/" + roomCode + "/timer", timerMessage); // 타이머 리셋 브로드캐스트
+        TimerMessage timerMessage = new TimerMessage(TURN_TIME, nextPlayer);
+        log.info("[nextPlayerTurn] - Broadcasting TimerMessage: " + timerMessage);
+        messagingTemplate.convertAndSend("/topic/room/" + roomCode + "/timer", timerMessage);
     }
 
-
-
     public void startVote(String roomCode) {
-        // 1. "투표를 시행하겠습니까? 60초 뒤에는 자동으로 투표에 진입합니다" 메시지와 타이머 전송
         messagingTemplate.convertAndSend("/topic/room/" + roomCode + "/votePrompt", "투표를 시행하겠습니까? 60초 뒤에는 자동으로 투표에 진입합니다.");
         timeLeftMap.put(roomCode, 60);
         messagingTemplate.convertAndSend("/topic/room/" + roomCode + "/timer", new TimerMessage(60, "vote"));
-
     }
 
     private void finalizeGame(String roomCode, boolean liarWon) {
-        // 게임 종료 처리 로직
         messagingTemplate.convertAndSend("/topic/room/" + roomCode + "/gameEnd", liarWon ? "라이어가 승리했습니다!" : "라이어가 패배했습니다!");
-        // 필요한 리소스 정리 및 게임 데이터 초기화
     }
 
     public LiarOptionResponseDto liarOptions(String roomCode) {
-        CopyOnWriteArrayList<String> players = webSocketService.getPlayers(roomCode);
+        CopyOnWriteArrayList<String> players = this.getPlayers(roomCode);
         log.info("[GameService - liarOptions] - players.size() : {}", players.size());
-        Integer liarIndex = webSocketService.getLiarIndex(roomCode);
+        Integer liarIndex = this.getLiarIndex(roomCode);
         log.info("[GameService - liarOptions] - liarIndex : {}", liarIndex);
         String liar = players.get(liarIndex);
         log.info("[GameService - liarOptions] - liar : {}", liar);
-        List<String> topicAndKeyword = webSocketService.getKeyword(roomCode);
+        List<String> topicAndKeyword = this.getKeyword(roomCode);
         String topic = topicAndKeyword.get(0);
         String keyword = topicAndKeyword.get(1);
         log.info("[GameService - liarOptions] - topic : {}", topic);
@@ -312,31 +355,20 @@ public class GameService {
         Long topicId = topicRepository.findIdByName(topic);
         log.info("[GameService - liarOptions] - topicId : {}", topicId);
         List<String> optionalKeywords = keywordRepository.findOptionKeywordByTopicIdExcludingKeyword(topicId, keyword);
-        log.info("[GameService - liarOptions] - optionalKeywords.getFirst() : {}", optionalKeywords.getFirst());
-
+        log.info("[GameService - liarOptions] - optionalKeywords.getFirst() : {}", optionalKeywords.get(0));
         optionalKeywords.add(keyword);
 
-        // 리스트를 무작위로 섞음
         Collections.shuffle(optionalKeywords);
-
         return new LiarOptionResponseDto(liar, optionalKeywords, keyword);
     }
 
     public void liarGuess(String roomCode, LiarGuessRequestDto liarGuessRequestdto) {
         boolean correct = liarGuessRequestdto.selectedOption().equals(liarGuessRequestdto.correctAnswer());
-
-        LiarGuessResponseDto result = new LiarGuessResponseDto(
-                correct,
-                liarGuessRequestdto.selectedOption(),
-                liarGuessRequestdto.correctAnswer()
-        );
-
-        // 결과를 모든 클라이언트에게 브로드캐스트
+        LiarGuessResponseDto result = new LiarGuessResponseDto(correct, liarGuessRequestdto.selectedOption(), liarGuessRequestdto.correctAnswer());
         messagingTemplate.convertAndSend("/topic/room/" + roomCode + "/liar-result", result);
     }
 
     public void endGame(String roomCode) {
-        // 1. 타이머, 투표, 선언 등 게임 관련 데이터 초기화
         gameStatusMap.remove(roomCode);
         votes.remove(roomCode);
         liarVoteConsent.remove(roomCode);
@@ -345,13 +377,13 @@ public class GameService {
         timeLeftMap.remove(roomCode);
         turnCounterMap.remove(roomCode);
 
-        // 2. 스케줄러에서 예약된 작업 취소
         ScheduledFuture<?> scheduledTask = voteStartTasks.remove(roomCode);
         if (scheduledTask != null) {
             scheduledTask.cancel(false);
         }
 
-        // 3. 게임 종료 메시지를 클라이언트로 전송
         messagingTemplate.convertAndSend("/topic/room/" + roomCode + "/gameEnd", "게임이 종료되었습니다.");
     }
+
+
 }
